DDF-3327 Fix description overflow in Admin UI Application boxes

--- a/platform/admin/ui/src/main/webapp/less/application/app-card.less
+++ b/platform/admin/ui/src/main/webapp/less/application/app-card.less
@@ -25,6 +25,8 @@
   .panel-body {
     padding: 0px @app-card-overlay-width 0px 0px; // reset bootstrap
     height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   .name {
